# voice_control_ws

./: .gitattributes  .gitignore  readme.MD
src/my_cmake_pkg/: CMakeLists.txt  package.xml
src/my_cmake_pkg/launch/: turtle_circle.launch.py  turtle_voice_control.launch.py
src/my_cmake_pkg/src/: circle_turtle_node.cpp  example_node.cpp  turtle_voice_cmd_node.cpp
src/online_asr/: package.xml  setup.cfg  setup.py
src/online_asr/launch/: online_asr.launch.py  readME.md  voice_control.launch.py  voice_control_with_feedback.launch.py
src/online_asr/online_asr/: voice_control_node.py
src/online_asr/python_asr/: asr.py  readME.md  test_tts.pcm  tts.py
src/online_asr/resource/: asr.py  online_asr
src/voice_interaction_pkg/: CMakeLists.txt  package.xml
src/voice_interaction_pkg/launch/: voice_echo.launch.py
src/voice_interaction_pkg/scripts/: transcribe_mic.py
src/voice_interaction_pkg/src/: speech_echo_node.cpp
