<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_cmake_pkg</name>
  <version>0.0.1</version>
  <description>CMake-based ROS 2 package template.</description>
  <maintainer email="user@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>voice_interaction_pkg</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
